@@ -1,3 +1,7 @@
+* Feb 9 2001 hship
+
+Have RequestContext implement IRender.
+
 * Feb 7 2001 hship
 
 Add some logging to AssetExternalizer.
